--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.0.0/p5.js"></script>
 
   <script src="https://unpkg.com/ml5@0.4.3/dist/ml5.min.js"></script>
+  <script src ="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.0.0/addons/p5.sound.min.js"></script>
+  <script src ="https://cdn.jsdelivr.net/npm/p5@1.0.0/lib/addons/p5.sound.min.js"></script>
 
   <link rel="stylesheet" type="text/css" href="style.css">
 
@@ -21,7 +23,7 @@
       <span>Move your left hand up and/or down to change the speed. Move your right hand wrist up and/or down to change the volume.</span>
     </h3>
     <br>
-    <button id = "Play_button" class = "btn btn-success" >Play</button>
+    <button id = "Play_button" onclick = "start()" class = "btn btn-success" >Play</button>
     <div id = "image1">
       <img src = "disk.gif" class = "disk">
       <br>
